# fdtrace

./: .gitignore  Cargo.toml  README.md  devenv.nix  devenv.yaml  rustfmt.toml  temp.md
.cargo/: config.toml
.github/workflows/: main.yml  tests.yml
data/: README.md  fdtrace.bt  threaded.txt
example/: Cargo.toml
example/src/: main.rs
examples/: multisession.rs  threaded.rs
fdtrace/: Cargo.toml  TODO.md  build.rs  debug.txt  output.txt
fdtrace-common/: Cargo.toml
fdtrace-common/src/: lib.rs
fdtrace-ebpf/: Cargo.toml  build.rs  devenv.yaml
fdtrace-ebpf/src/: ctx.rs  main.rs  open.rs
fdtrace/data/: README.md  multisession.txt  raw_trace_0.txt  raw_trace_1.txt  raw_trace_2.txt
fdtrace/scripts/: README.md  fdtrace.bt  trace_sysenter.bt
fdtrace/src/: analysis.rs  args.rs  bpftrace.rs  ebpf.rs  main.rs  syscall.rs  tracer.rs
fdtrace/src/analysis/: agg.rs  file.rs  mod.rs  temporal.rs  thread.rs  utils.rs
fdtrace/src/analysis/snapshots/: fdtrace__analysis__tests__analysis_0.snap  fdtrace__analysis__tests__analysis_1.snap  fdtrace__analysis__tests__analyze_multisession.snap
fdtrace/src/old/: krpobe.rs  tracepoint.rs
fdtrace/src/snapshots/: fdtrace__syscall__tests__parse_threaded.snap  fdtrace__syscall__tests__parse_trace_0.snap
src/: syscall.rs  tracer.rs
src/analysis/: mod.rs  thread.rs
src/analysis/snapshots/: fdtrace__analysis__tests__analyze_threaded.snap
src/snapshots/: fdtrace__syscall__tests__parse_multisession.snap  fdtrace__syscall__tests__parse_threaded.snap  fdtrace__syscall__tests__parse_trace_1.snap
