[package]
name = "fdtrace"
version = "0.1.0"
edition = "2021"

[features]
default = []
trace-stdfd = []

[dependencies]
log = "0.4.22"
env_logger = "0.11.5"

structopt = "0.3.26"
tempfile = "3.14.0"
itertools = "0.13.0"
anyhow = "1.0.93"

comfy-table = "7.1.3"
termimad = "0.31.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dev-dependencies]
insta = { version = "1.41.1", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
